fix: z-index clash between dropdown menu and status bars

--- a/packages/micro-journeys/src/interactive-pathways.scss
+++ b/packages/micro-journeys/src/interactive-pathways.scss
@@ -109,7 +109,7 @@
 
     &.active {
       opacity: 1;
-      z-index: 1;
+      z-index: 2;
     }
 
     &__item {
